# CardLobby

./: CMakeLists.txt  Config.cmake.in
qml/: CardLobby.qml  OpponentDetail.qml
